--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Văn Chương - Dòng Chảy Lịch Sử</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
         :root{
             --bg:#faf8f5;
             --card:#ffffff;
@@ -23,7 +24,7 @@
             position: fixed; top:0; left:0; right:0; bottom:0;
             background-color: #f4f1ea;
             display:flex;align-items:center;justify-content:center;flex-direction:column;
-            font-family: 'Garamond', serif; font-size:1.8em; text-align:center; z-index:10;
+            font-family: 'Pacifico', cursive; font-size:1.8em; text-align:center; z-index:10;
             transition: opacity .9s ease;
         }
         #intro-text p{opacity:0; animation:fadeIn 1.5s forwards}
@@ -39,7 +40,7 @@
         header{
             position:relative; height:300px; display:flex;align-items:center;justify-content:center;text-align:center;
             background: url('https://cdn.wallpapersafari.com/31/99/IqtX9C.jpg') center/cover no-repeat;
-            color:#fff; font-family:'Garamond', serif;
+            color:#fff; font-family:'Pacifico', cursive;
         }
         header::after{content:' ';position:absolute;inset:0;background:rgba(0,0,0,0.45)}
         header .header-content{position:relative;z-index:2}
@@ -63,7 +64,7 @@
         /* Tiêu đề lớn chìm trong nền */
         .section-title-large{
             position:absolute; inset:0; display:flex;align-items:center;justify-content:center;opacity:.12;
-            font-size:3.2rem; font-weight:700; font-family:'Garamond',serif; letter-spacing:4px; pointer-events:none;
+            font-size:3.2rem; font-weight:700; font-family:'Pacifico', cursive; letter-spacing:4px; pointer-events:none;
             text-transform:uppercase;
         }
 
@@ -230,3 +231,4 @@
 </script>
 </body>
 </html>
+
