--- a/Index.html
+++ b/Index.html
@@ -89,6 +89,7 @@
             background:var(--muted);
             padding:60px 10%;
             text-align:center;
+            font-family: 'Pacifico', cursive;
         }
         .credit-grid{
             display:grid;
@@ -231,4 +232,5 @@
 </script>
 </body>
 </html>
+
 
